# gainy-docker-images

./: .env.make  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: main.yml  publish.yml  test.yml
docker/firebase/: Dockerfile
docker/hasura/: Dockerfile  init.sh  requirements.txt
docker/lambda-python/: Dockerfile  pyproject.toml  requirements.txt
docker/meltano/: Dockerfile  README.md  init.sh  meltano.yml  requirements.txt  wait.sh
docker/meltano/meltano/: meltano.yml
docker/meltano/tap-coingecko/: Dockerfile  README.md  config.json.dist  pyproject.toml  test.Dockerfile  tox.ini
docker/meltano/tap-coingecko/tap_coingecko/: client.py  streams.py  tap.py
docker/meltano/tap-coingecko/tap_coingecko/schemas/: coin_data.json  coin_market_realtime.json
docker/meltano/tap-coingecko/tests/: test_core.py
docker/meltano/tap-coingecko/tests/cassettes/tap/: tap-core.yaml
docker/meltano/tap-eodhistoricaldata/: Dockerfile  README.md  config.json.dist  pyproject.toml  test.Dockerfile  tox.ini
docker/meltano/tap-eodhistoricaldata/tap_eodhistoricaldata/: client.py  streams.py  tap.py
docker/meltano/tap-eodhistoricaldata/tap_eodhistoricaldata/schemas/: dividends.json  eod.json  fundamentals.json  options.json
docker/meltano/tap-eodhistoricaldata/tap_eodhistoricaldata/tests/: __init__.py  test_core.py
docker/meltano/tap-eodhistoricaldata/tap_eodhistoricaldata/tests/cassettes/test_core/: test_standard_tap_tests.yaml
docker/meltano/tap-eodhistoricaldata/tap_eodhistoricaldata/tests/fixtures/: sample.json
docker/meltano/tap-eodhistoricaldata/tests/: test_core.py
docker/meltano/tap-eodhistoricaldata/tests/cassettes/tap/: tap-core.yaml  tap-state-sync.yaml
docker/meltano/tap-polygon/: .gitignore  Dockerfile  README.md  config.json.dist  pyproject.toml  test.Dockerfile  tox.ini
docker/meltano/tap-polygon/tap_polygon/: client.py  streams.py  tap.py
docker/meltano/tap-polygon/tap_polygon/schemas/: crypto_historical_prices.json  marketstatus_upcoming.json  options_historical_prices.json  realtime_prices.json  stock_splits.json  stocks_historical_prices.json
docker/meltano/tap-polygon/tests/: test_core.py
docker/meltano/tap-polygon/tests/cassettes/tap/: tap-core.yaml
docker/meltano/target-algolia/: README.md  pyproject.toml
docker/meltano/target-algolia/settings/: ticker_index.json
docker/meltano/target-algolia/src/target_algolia/: sinks.py  target.py  utils.py
