[tool.poetry]
name = "lambda-python"
version = "0.1.0"
description = ""
authors = ["Mikhail Astashkevich <asmisha@tut.by>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.1"
numpy = "1.21.1"
datadog = "^0.42.0"
sklearn = "^0.0"
plaid-python = "^8.4.0"
algoliasearch = "^2.6.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
hubspot-api-client = "^4.0.6"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
toml = "^0.10.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
