[tool.poetry]
name = "tap-eodhistoricaldata"
version = "0.0.1"
description = "`tap-eodhistoricaldata` is a Singer tap for eodhistoricaldata, built with the Meltano SDK for Singer Taps."
authors = ["Artem Vysotsky"]
license = ""

[tool.poetry.dependencies]
python = ">=3.6.1,<3.9"
requests = "^2.25.1"
singer-sdk = { url = "https://gitlab.com/vood/sdk/-/archive/0.3.4-dev/sdk-0.3.4-dev.tar.gz" }

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
tox = "^3.23.1"
pytest-recording = "^0.11.0"
pytest-profiling = "^1.7.0"
graphviz = "^0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-eodhistoricaldata = 'tap_eodhistoricaldata.tap:Tapeodhistoricaldata.cli'
