[tool.poetry]
name = "tap-polygon"
version = "0.0.1"
description = "`tap-polygon` is a Singer tap for polygon, built with the Meltano SDK for Singer Taps."
authors = ["Mikhail Astashkevich"]
license = ""

[tool.poetry.dependencies]
python = ">=3.8.1,<3.10"
requests = "^2.31.0"
singer-sdk = "^0.4.9"
datadog = "^0.42.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
tox = "^3.23.1"
pytest-recording = "^0.11.0"
pytest-profiling = "^1.7.0"
graphviz = "^0.16"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-polygon = 'tap_polygon.tap:Tappolygon.cli'

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
